--- a/templates/warning.html
+++ b/templates/warning.html
@@ -1,4 +1,4 @@
-<div class="warning edit-warning-infobox">
+<div class="edit-warning-infobox">
 	<p style="text-align: left">{{{MSG}}}</p>
 
 	<p style="text-align: center;"><form action="{{{URL}}}" method="post">
